fix the bubble css to make it more consistent
For example, some pages have elements with z-index so the bubble becomes
invisible. Others rewrite <hr> css, etc..

--- a/content_script.css
+++ b/content_script.css
@@ -9,6 +9,7 @@
   padding: 9px;
   display: block;
   background:-webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#e6e6e6));
+  z-index: 1000;
 }
 
 .bubble_ext_name {
@@ -16,13 +17,14 @@
   margin: 0px;
   font-size: 60%;
   text-align: right;
+  margin-top: 5px;
 }
 
 .bubble_title {
   font-weight: bold;
   font: arial, sans-serif;
   color: #000066;
-  margin: 3px;
+  margin: 1px;
   font-size: 100%;
   padding: 2px;
 }
@@ -31,9 +33,13 @@
   font: arial, sans-serif;
   padding: 0px;
   font-size: 100%;
+  margin: 0px;
 }
 
 .bubble_hr {
   height: 1px;
   background-color: #aaa;
+  border-top: 1px solid #e4e4e4;
+  margin: 1px;
+  display: block;
 }
